# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['.', "bin"]

[tool.setuptools.package-data]
mypkg = ["*.so", "*.dll"]

[project]
name = "atriumdb"
version = "2.0.0"
description = "Timeseries Database"
readme = "README.md"
authors = [{ name = "Robert Greer", email = "robert.greer@sickkids.ca"}, { name = "William Dixon", email = "will.dixon@sickkids.ca" }, { name = "Spencer Vecile", email = "spencer.vecile@sickkids.ca"}]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["timeseries", "database", "waveform", "ML"]
dependencies = [
    'tomli; python_version < "3.11"',
    "numpy >= 1.21.4, < 2",
]

[project.optional-dependencies]
mariadb = [
    "mariadb == 1.1.6"
]
remote = [
    "requests >= 2.28.2, < 3",
    "auth0-python >= 4.1.0, < 5",
    "qrcodeT >= 1.0.4, < 2",
    "python-dotenv >= 0.21, < 1",
]
cli = [
    "click >= 8.1.3, < 9",
    "pandas >= 1.5, < 2",
    "tabulate >= 0.9.0, < 1",
    "fastparquet == 2023.2.0",
    "tqdm >= 4.65.0, < 5",
    "python-dotenv >= 0.21, < 1",
]

all = [
    "mariadb == 1.1.6",
    "requests >= 2.28.2, < 3",
    "auth0-python >= 4.1.0, < 5",
    "qrcodeT >= 1.0.4, < 2",
    "python-dotenv >= 0.21, < 1",
    "click >= 8.1.3, < 9",
    "pandas >= 1.5, < 2",
    "tabulate >= 0.9.0, < 1",
    "fastparquet == 2023.2.0",
    "tqdm >= 4.65.0, < 5",
    "python-dotenv >= 0.21, < 1",
]

[dev-dependencies]
testing = [
    "wfdb >= 4.1.0, < 5",
    "names >= 0.3.0, < 1",
    "pytest"
]

requires-python = ">=3.10"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[project.urls]
Homepage = "https://github.com/LaussenLabs/atriumdb"

[project.scripts]
hello = "atriumdb.cli.hello:hello"
atriumdb = "atriumdb.cli.atriumdb_cli:cli"
