# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['.', "bin"]

[tool.setuptools.package-data]
mypkg = ["*.so", "*.dll"]

[project]
name = "atriumdb"
version = "2.2.3"
description = "Timeseries Database"
readme = "README.md"
authors = [{name = "Robert Greer, William Dixon, Spencer Vecile"}, { name = "Robert Greer", email = "robert.greer@sickkids.ca"}, { name = "William Dixon", email = "will.dixon@sickkids.ca" }, { name = "Spencer Vecile", email = "spencer.vecile@sickkids.ca"}]
maintainers = [{name = "William Dixon, Spencer Vecile", email = "laussen.labs@sickkids.ca"}, { name = "William Dixon", email = "will.dixon@sickkids.ca" }, { name = "Spencer Vecile", email = "spencer.vecile@sickkids.ca"}]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Development Status :: 4 - Beta",
]
keywords = ["atriumdb", "timeseries", "database", "waveform", "medical data", "machine learning", "data", "data science"]
dependencies = [
    'tomli; python_version < "3.11"',
    "numpy >= 1.21.4, < 2",
    "PyYAML >= 6.0",
    "tqdm >= 4.65.0, < 5",
]

[project.optional-dependencies]
mariadb = [
    "mariadb == 1.1.10",
]
remote = [
    "requests >= 2.28.2, < 3",
    "PyJWT[crypto] >= 2.8.0, < 3",
    "python-dotenv >= 0.21, < 1",
    "websockets >= 12.0, < 13",
]
cli = [
    "requests >= 2.28.2, < 3",
    "qrcodeT >= 1.0.4, < 2",
    "click >= 8.1.3, < 9",
    "pandas >= 1.5, < 2",
    "tabulate >= 0.9.0, < 1",
    "fastparquet == 2023.2.0",
    "python-dotenv >= 0.21, < 1",
    "PyYAML >= 6.0"
]
all = [
    "mariadb == 1.1.10",
    "requests >= 2.28.2, < 3",
    "PyJWT[crypto] >= 2.8.0, < 3",
    "websockets >= 12.0, < 13",
    "qrcodeT >= 1.0.4, < 2",
    "python-dotenv >= 0.21, < 1",
    "click >= 8.1.3, < 9",
    "pandas >= 1.5, < 2",
    "tabulate >= 0.9.0, < 1",
    "fastparquet >= 2023.2.0, < 2024",
    "wfdb >= 4.1.0, < 5",
    "pyarrow >= 16.0.0, < 17",
]

[dev-dependencies]
testing = [
    "wfdb >= 4.1.0, < 5",
    "names >= 0.3.0, < 1",
    "uvicorn >= 0.27.0, < 1",
    "pytest"
]

requires-python = ">=3.10"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[project.urls]
Homepage = "https://atriumdb.io"
Documentation = "https://docs.atriumdb.io/"

[project.scripts]
hello = "atriumdb.cli.hello:hello"
atriumdb = "atriumdb.cli.atriumdb_cli:cli"
