# pyproject.toml

[build-system]
requires      = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['.', "bin"]

[tool.setuptools.package-data]
mypkg = ["*.so", "*.dll"]

[project]
name = "atriumdb"
version = "2.5.2"
description = "Timeseries Database"
readme = "README.md"
authors = [{name = "Robert Greer, William Dixon, Spencer Vecile"}, { name = "Robert Greer", email = "robert.greer@sickkids.ca"}, { name = "William Dixon", email = "will.dixon@sickkids.ca" }, { name = "Spencer Vecile", email = "spencer.vecile@sickkids.ca"}]
maintainers = [{name = "William Dixon, Spencer Vecile", email = "laussen.labs@sickkids.ca"}, { name = "William Dixon", email = "will.dixon@sickkids.ca" }, { name = "Spencer Vecile", email = "spencer.vecile@sickkids.ca"}]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Development Status :: 5 - Production/Stable",
]
keywords = ["atriumdb", "timeseries", "database", "waveform", "medical data", "machine learning", "data", "data science"]
dependencies = [
    'tomli; python_version < "3.11"',
    "numpy >= 2.2.6, < 3",
    "PyYAML >= 6.0.2",
    "tqdm >= 4.67.1, < 5",
]

[project.optional-dependencies]
mariadb = [
    "mariadb == 1.1.13",
]
remote = [
    "requests >= 2.32.4, < 3",
    "PyJWT[crypto] >= 2.6.0, < 3",
    "python-dotenv >= 0.21.1, < 1",
    "websockets >= 15.0.1, < 16",
]
cli = [
    "requests >= 2.32.4, < 3",
    "qrcodeT >= 1.0.4, < 2",
    "click >= 8.2.1, < 9",
    "pandas >= 2.3.1, < 3",
    "tabulate >= 0.9.0, < 1",
    "fastparquet == 2024.11.0",
    "python-dotenv >= 0.21.1, < 1",
    "PyYAML >= 6.0.2"
]
all = [
    "mariadb == 1.1.13",
    "requests >= 2.32.4, < 3",
    "PyJWT[crypto] >= 2.6.0, < 3",
    "websockets >= 15.0.1, < 16",
    "qrcodeT >= 1.0.4, < 2",
    "python-dotenv >= 0.21.1, < 1",
    "click >= 8.2.1, < 9",
    "pandas >= 2.3.1, < 3",
    "tabulate >= 0.9.0, < 1",
    "fastparquet >= 2024.11.0, < 2025",
    "wfdb >= 4.2.0, < 5",
    "pyarrow >= 21.0.0, < 22",
    "tzdata >= 2025.2, < 2026"
]
testing = [
    "mariadb == 1.1.13",
    "requests >= 2.32.4, < 3",
    "PyJWT[crypto] >= 2.6.0, < 3",
    "websockets >= 15.0.1, < 16",
    "qrcodeT >= 1.0.4, < 2",
    "python-dotenv >= 0.21.1, < 1",
    "click >= 8.2.1, < 9",
    "pandas >= 2.3.1, < 3",
    "tabulate >= 0.9.0, < 1",
    "fastparquet >= 2024.11.0, < 2025",
    "wfdb >= 4.2.0, < 5",
    "pyarrow >= 21.0.0, < 22",
    "tzdata >= 2025.2, < 2026",
    "names >= 0.3.0, < 1",
    "uvicorn >= 0.35.0, < 1",
    "pytest >= 7.2.1",
    "fastapi >= 0.95.0, < 1"
]
[dev-dependencies]
requires-python = ">=3.10"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[project.urls]
Homepage = "https://atriumdb.io"
Documentation = "https://docs.atriumdb.io/"

[project.scripts]
hello = "atriumdb.cli.hello:hello"
atriumdb = "atriumdb.cli.atriumdb_cli:cli"