add_library(Time include/time_block.h src/time_encoder.c src/time_encode_buffer.c src/Time_Timestamps_Int64_Nano/time_timestamps_int64_nano_encoder.c src/time_p.h src/Time_Timestamps_Int64_Nano/time_timestamps_int64_nano_decoder.c src/time_decoder.c src/Time_Timestamps_Int64_Nano/time_timestamps_int64_nano_buffer.c src/Time_Gap_Array_Index_Duration_Nano/time_gap_array_index_dur_nano_buffer.c src/Time_Gap_Array_Index_Duration_Nano/time_gap_array_index_dur_nano_decode.c src/time_helpers.c src/Time_Gap_Array_Index_Duration_Nano/time_gap_array_index_dur_nano_encode.c src/Time_Gap_Array_Index_Num_Samples/time_gap_array_index_num_samples_buffer.c src/Time_Gap_Array_Index_Num_Samples/time_gap_array_index_num_samples_encode.c src/Time_Gap_Array_Index_Num_Samples/time_gap_array_index_num_samples_decode.c)

target_include_directories(Time PUBLIC include)
target_include_directories(Time PRIVATE src)

target_link_libraries(Time PUBLIC Block_Header)
target_link_libraries(Time PRIVATE Gap)